refactor : 회원/비회원 대회 전체 팀 조회 통합